Исправления: наименований полей в таблицах